# monorepo

./: Makefile  README.md  pyproject.toml
libraries/lib1/: pyproject.toml
libraries/lib1/tests/: test_lib1.py
libraries/lib2/: pyproject.toml
libraries/lib2/same_name/lib2/: __init__.py
libraries/lib2/tests/: test_lib2.py
projects/project1/: pyproject.toml
projects/project2/: pyproject.toml
