[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Martin Gran <martgra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
project1 = {path = "projects/project1", develop = true}
project2 = {path = "projects/project2", develop = true}
"same-name.lib2" = {path = "libraries/lib2", develop = true}
"same-name.lib1" = {path = "libraries/lib1", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
