[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Martin Gran <martgra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
project1 = {path = "projects/project1", develop = true}
project2 = {path = "projects/project2", develop = true}
"same-name.lib2" = {path = "libraries/lib2", develop = true}
"same-name.lib1" = {path = "libraries/lib1", develop = true}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"
pydocstyle = "^6.1.1"
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
